--- a/src/app.html
+++ b/src/app.html
@@ -3,7 +3,9 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="stylesheet" href="/src/styles/vs2015.css" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<title>My 370R AI App</title>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover" data-theme="cerberus">
