Converted project over to Skeleton 3 and Tailwind 4

--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" data-theme="cerberus">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
@@ -9,6 +9,6 @@
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover" data-theme="cerberus">
-		<div style="display: contents">%sveltekit.body%</div>
+		<div class="contents-wrapper">%sveltekit.body%</div>
 	</body>
 </html>
